Bug 1657189 - Avoid GetFragDataLocation('gl_*') on Mesa. r=gfx-reviewers,lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D122406